Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/typeAnnotations/failures/common/innertypeparams/DuplicateAnnotationValue.out
DuplicateAnnotationValue.java:11:31: compiler.err.duplicate.annotation.member.value: value, A
1 error
